
[metadata]
name = maldi-nn
author = Gaetan De Waele
author_email = gaetandewaele@hotmail.com
description = Deep learning tools and models for MALDI-TOF spectra analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gdewael/maldi-nn
license_files = LICENSE

[options]
packages = find:
python_requires = >=3.9
install_requires = 
    numpy
    torch
    