
[metadata]
name = maldi-nn
author = Gaetan De Waele
author_email = gaetandewaele@hotmail.com
description = Deep learning tools and models for MALDI-TOF spectra analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gdewael/maldi-nn
license_files = LICENSE

[options]
packages = find:
python_requires = >=3.9
install_requires = 
    numpy
    torch
    h5torch>=0.2.5
    bio-attention
    pandas
    scipy
    matplotlib
    rdkit
    selfies
    deepsmiles
    scikit-learn
    xgboost


[options.entry_points]
console_scripts =
    process_DRIAMS = maldi_nn.scripts.process_DRIAMS:main
    train_amr = maldi_nn.scripts.train_amr:main
    reproduce_maldi_finetune_hosp = maldi_nn.reproduce.finetune_amr_hosp:main
    reproduce_maldi_baselines_lr = maldi_nn.reproduce.baselines.baselinescript_lr:main
    reproduce_maldi_baselines_xgb = maldi_nn.reproduce.baselines.baselinescript_xgb:main
    reproduce_maldi_baselines_MLP = maldi_nn.reproduce.baselines.baselinescript_MLP:main
