
[metadata]
name = maldi-nn
author = Gaetan De Waele
description = Deep learning tools and models for MALDI-TOF spectra analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gdewael/maldi-nn
license_files = LICENSE

[options]
packages = find:
python_requires = >=3.9
install_requires = 
    numpy
    torch
    lightning
    h5torch>=0.2.5
    bio-attention
    pandas
    scipy
    matplotlib
    rdkit
    selfies
    deepsmiles
    scikit-learn
    xgboost
include_package_data = True

[options.entry_points]
console_scripts =
    process_DRIAMS = maldi_nn.scripts.process_DRIAMS:main
    process_RKI = maldi_nn.scripts.process_RKI:main
    train_amr = maldi_nn.scripts.train_amr:main
    train_malditransformer = maldi_nn.scripts.train_malditransformer:main
    malditransformer_domain_adapt = maldi_nn.scripts.domain_adaptation:main
    train_clf = maldi_nn.scripts.train_clf:main
    reproduce_maldi_finetune_hosp = maldi_nn.reproduce.finetune_amr_hosp:main
    reproduce_amr_baseline = maldi_nn.reproduce.amr_baselinescript:main
    reproduce_clf_baseline = maldi_nn.reproduce.clf_baselinescript:main
    reproduce_estimate_peak_distr = maldi_nn.reproduce.estimate_peak_distr:main
